--- a/src/renderer/src/assets/base.css
+++ b/src/renderer/src/assets/base.css
@@ -4,6 +4,29 @@
 
 @layer base {
   :root {
+    --background: 0 0% 100%;
+    --foreground: 224 71.4% 4.1%;
+    --card: 0 0% 100%;
+    --card-foreground: 224 71.4% 4.1%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 224 71.4% 4.1%;
+    --primary: 262.1 83.3% 57.8%;
+    --primary-foreground: 210 20% 98%;
+    --secondary: 220 14.3% 95.9%;
+    --secondary-foreground: 220.9 39.3% 11%;
+    --muted: 220 14.3% 95.9%;
+    --muted-foreground: 220 8.9% 46.1%;
+    --accent: 220 14.3% 95.9%;
+    --accent-foreground: 220.9 39.3% 11%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 20% 98%;
+    --border: 220 13% 91%;
+    --input: 220 13% 91%;
+    --ring: 262.1 83.3% 57.8%;
+    --radius: 1rem;
+  }
+
+  .dark {
     --background: 224 71.4% 4.1%;
     --foreground: 210 20% 98%;
     --card: 224 71.4% 4.1%;
@@ -23,7 +46,6 @@
     --border: 215 27.9% 16.9%;
     --input: 215 27.9% 16.9%;
     --ring: 263.4 70% 50.4%;
-    --radius: 0.5rem;
   }
 }
 
@@ -34,44 +56,4 @@
   body {
     @apply bg-background text-foreground;
   }
-}
-
-.fitObject {
-  @apply h-auto max-h-[100%] w-auto max-w-[100%] object-contain object-center;
-}
-#titleBar {
-  -webkit-app-region: drag;
-}
-.titleButtons div[role='button'],
-.titleButtons a {
-  -webkit-app-region: no-drag;
-}
-.titleIcon {
-  @apply rounded px-1.5 py-0 transition-colors hover:bg-muted-foreground/25;
-}
-
-/* width */
-::-webkit-scrollbar {
-  @apply w-2;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  @apply rounded-xl bg-secondary;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  @apply rounded-xl bg-white/25;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  @apply rounded-xl bg-primary;
-}
-
-.customGrid {
-  @apply grid w-full justify-center gap-4;
-
-  grid-template-columns: repeat(auto-fit, minmax(0, 144px));
 }
